        - https://getfirebug.com/firebug-lite.js (compressed)
        - https://getfirebug.com/firebug-lite-debug.js (uncompressed, trace)
        - https://getfirebug.com/firebug-lite-beta.js (beta channel)
        - https://getfirebug.com/firebug-lite-alpha.js (alpha channel)
    
    - Added "debug" URL option
    
    - Updated "classic" and "light" skins
    
    - Firebug.extend() method added to support Firebug Lite extensions
    
    - Fixed the missing command line API dir()
    - Fixed the missing command line api dirxml()
    - Fixed the missing console.firebuglite property in the console object
    - Fixed problem when loading an extension before the UI finish loading


###################################################################################################
 1.3.0b2 - 2009-05-06 - Revision: 6695
###################################################################################################

-------------------------------------------------------------------------------
Console
-------------------------------------------------------------------------------
    - The Console Panel now uses the same rendering engine (domplate) and object
      representation (Reps) used in Firebug
      
    - Console now has clickable objects links, which will lead you to the related 
      panel, HTML if is an element, or the DOM panel if is an object
      
    - console.dir() now uses the same rich representation as in the DOM panel, with
      items which can be collapsed, and links which can be clicked.
      
    - console.trace() now uses rich representation, with clickable links, and will
      show the file name and line number for some browsers when found at the stacktrace 
    
    - console.count() now works as in Firebug
    - console.group() now can be collapsed, using the same representation as in Firebug 
    - console.groupCollapsed() added to the console object
