@@ -26,6 +26,7 @@ var FBL = {};
 // Constants
     
 var productionDir = "http://getfirebug.com/releases/lite/";
+var bookmarletVersion = 3;
 
 // ************************************************************************************************
 
@@ -116,9 +117,17 @@ this.initialize = function()
             FBL.Env.Options.enablePersistent = prefs.enablePersistent;
         }
         
-        if (FBL.isFirefox && typeof console == "object" && console.firebug &&
+        if (FBL.isFirefox && 
+            typeof FBL.Env.browser.console == "object" && 
+            FBL.Env.browser.console.firebug &&
             FBL.Env.Options.disableWhenFirebugActive)
-            return;
+                return;
+    }
+    
+    // exposes the FBL to the global namespace when in debug mode
+    if (FBL.Env.isDebugMode)
+    {
+        FBL.Env.browser.FBL = FBL;
     }
     
     // check browser compatibilities
@@ -289,6 +298,7 @@ this.Env =
     // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * 
     // Env states
     isDevelopmentMode: false,
+    isDebugMode: false,
     isChromeContext: false,
     
     // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * 
@@ -320,16 +330,16 @@ var findLocation =  function findLocation()
     var doc = document;
     
     // Firebug Lite 1.3.0 bookmarlet identification
-    var script = doc.getElementById("FirebugLiteBookmarlet");
+    var script = doc.getElementById("FirebugLite");
     
     if (script)
     {
         file = reFirebugFile.exec(script.src);
         
-        var version = script.getAttribute("FirebugLiteBookmarlet");
-        var revision = version ? parseInt(version) : 0; 
+        var version = script.getAttribute("FirebugLite");
+        var number = version ? parseInt(version) : 0; 
         
-        if (!version || !revision || revision < 3)
+        if (!version || !number || number < bookmarletVersion)
         {
             // TODO: xxxpedro bookmarlet
             //FBL.Env.bookmarletOutdated = true;
@@ -416,13 +426,25 @@ var findLocation =  function findLocation()
     {
         var Env = FBL.Env;
         
+        // detecting development and debug modes via file name
         if (fileName == "firebug-lite-dev.js")
         {
             Env.isDevelopmentMode = true;
             Env.useLocalSkin = true;
-            Env.Options.disableWhenFirebugActive = false;
+            Env.isDebugMode = true;
+        }
+        else if (fileName == "firebug-lite-debug.js")
+        {
+            Env.isDebugMode = true;
         }
         
+        // process the <html debug="true">
+        if (Env.browser.document.documentElement.getAttribute("debug") == "true")
+        {
+            Env.Options.startOpened = true;
+        }
+        
+        // process the Script URL Options
         if (fileOptions)
         {
             var options = fileOptions.split(",");
@@ -446,22 +468,21 @@ var findLocation =  function findLocation()
                 
                 if (name == "debug")
                 {
-                    Env.Options.startOpened = true;
-                    Env.Options.enableTrace = true;
-                    Env.Options.disableWhenFirebugActive = false;
+                    Env.isDebugMode = !!value;
                 }
                 else if (name in Env.Options)
+                {
                     Env.Options[name] = value;
+                }
                 else
+                {
                     Env[name] = value;
+                }
             }
         }
         
-        if (Env.browser.document.documentElement.getAttribute("debug") == "true")
-            Env.Options.startOpened = true;
-        
+        // process the Script JSON Options
         var innerOptions = FBL.trim(script.innerHTML);
-        
         if (innerOptions)
         {
             var innerOptionsObject = eval("(" + innerOptions + ")");
@@ -470,11 +491,27 @@ var findLocation =  function findLocation()
             {
                 var value = innerOptionsObject[name];
                 
-                if (name in Env.Options)
+                if (name == "debug")
+                {
+                    Env.isDebugMode = !!value;
+                }
+                else if (name in Env.Options)
+                {
                     Env.Options[name] = value;
+                }
                 else
+                {
                     Env[name] = value;
+                }
             }
+        }
+        
+        // process the Debug Mode
+        if (Env.isDebugMode)
+        {
+            Env.Options.startOpened = true;
+            Env.Options.enableTrace = true;
+            Env.Options.disableWhenFirebugActive = false;
         }
         
         var loc = Env.Location;
